--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'openhuninn';
+  src: url('/src/fonts/jf-openhuninn-2.0.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+body {
+  @apply text-default;
+}
+
 .react-datepicker__triangle {
-    display: none;
-  }
+  display: none;
+}
